# napi-webp-animation

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
.github/actions/setup-rust/: action.yaml
.github/workflows/: CI.yml  ci.yaml
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
sample/: animations.js  index.js  package.json  pnpm-lock.yaml
src/: decoder.rs  encoder.rs  lib.rs
test/: main.test.mjs  main.test.mts  main.test.ts
