[package]
authors = ["Gunnar Omander <gunnar@gomander.dev>"]
edition = "2021"
name = "napi_webp_animation"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "^3.7.0"
napi-derive = "^3.4.0"
thiserror = "^2.0.17"
webp-animation = "^0.9.0"

[build-dependencies]
napi-build = "^2.3.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
